--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,14 @@
 {
+  "rewrites": [
+    { "source": "/api/(.*)", "destination": "/api/all" }
+  ],
   "headers": [
     {
       "source": "/(index.html)?",
       "headers": [{ "key": "Cache-Control", "value": "no-cache" }]
     },
     {
-      "source": "/service-worker.js",
+      "source": "/sw.js",
       "headers": [{ "key": "Cache-Control", "value": "no-cache" }]
     }
   ]
