--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,12 +1,20 @@
 {
-  "name": "NEW DELI",
-  "short_name": "NEW DELI",
+  "name": "מערכת ניהול משמרות",
+  "short_name": "ניהול משמרות",
   "start_url": "/",
   "display": "standalone",
-  "background_color": "#fbfff6",
-  "theme_color": "#2b5329",
+  "background_color": "#f7fddc",
+  "theme_color": "#2f6d37",
   "icons": [
-    { "src": "/icons/icon-192.png", "sizes": "192x192", "type": "image/png" },
-    { "src": "/icons/icon-512.png", "sizes": "512x512", "type": "image/png" }
+    {
+      "src": "/icons/icon-512.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "/icons/icon-512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
   ]
 }
