--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,9 @@
   "headers": [
     {
       "source": "/(index.html)?",
-      "headers": [{ "key": "Cache-Control", "value": "no-cache" }]
+      "headers": [
+        { "key": "Cache-Control", "value": "no-cache, no-store, must-revalidate" }
+      ]
     },
     {
       "source": "/sw.js",
