--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,19 +2,23 @@
   "name": "מערכת ניהול משמרות",
   "short_name": "ניהול משמרות",
   "start_url": "/",
+  "scope": "/",
   "display": "standalone",
+  "orientation": "portrait",
   "background_color": "#f7fddc",
   "theme_color": "#2f6d37",
   "icons": [
     {
-      "src": "/icons/icon-512.png",
+      "src": "/icons/icon-192.png",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     },
     {
       "src": "/icons/icon-512.png",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     }
   ]
 }
