--- a/public/manifest.json
+++ b/public/manifest.json
@@ -5,8 +5,8 @@
   "scope": "/",
   "display": "standalone",
   "orientation": "portrait",
-  "background_color": "#f7fddc",
-  "theme_color": "#2f6d37",
+"theme_color": "#111111",
+"background_color": "#111111",
   "icons": [
     {
       "src": "/icons/icon-192.png",
